# Rekeningrijden

./: README.md
Authentication-Service/: README.md
Authentication-Service/AuthenticationService/: AuthenticationService.sln
Car-Service/: CarService.csproj  Dockerfile  Program.cs  README.md  appsettings.json  docker-compose.yml  load-extensions.sh  pg-Dockerfile  swagger.json
Car-Service/Controllers/: CarController.cs
Car-Service/DTOs/: VehicleDto.cs  VehicleIdDto.cs  VehicleOwnerDto.cs
Car-Service/Data/: DataContext.cs  Seed.cs
Car-Service/Migrations/: 20230530113655_Init.Designer.cs  20230530113655_Init.cs  DataContextModelSnapshot.cs
Car-Service/Models/: Vehicle.cs
Car-Service/Properties/: launchSettings.json
Car-Service/PythonHelper/: pyproject.toml
Car-Service/PythonHelper/pythonhelper/: helper.py
Car-Service/Services/: CarService.cs  ICarService.cs
Coordinate-Service/: azure-pipelines.yml
Coordinate-Service/Coordinate-Service/: .dockerignore  Coordinate-Service.sln  docker-compose.yml
Documentation/: Makefile  README.md  azure-pipelines.yml  workspace.dsl
Documentation/decisions/: 0001-record-architecture-decisions.md  0002-use-structurizr-to-document-architecture.md  0003-use-markdown-documentation-to-add-context-to-structurizr.md  0004-use-a-microservice-based-architecture.md
Documentation/dsl/: architecture_model.dsl  architecture_views.dsl  old_group_2_model.dsl  old_group_2_views.dsl  shared_models.dsl  styles.dsl
Documentation/other/: generation.lorien  routing.lorien
Infrastructure/: .gitignore  GCLOUD.md  Makefile  README.md
Infrastructure/docker/: docker-builder.yaml  docker-compose.yaml
Infrastructure/google/: argocd-values.yml  cert-letsencrypt-prod.yml  cert-letsencrypt-staging.yml  cert-manager-values.yml  ingress-base.yml  ingress-certify.yml  ingress-delivery.yml  ingress-endpoints.yml  ingress-no-ssl.yml  keycloak-values.yml  keycloak_users.sh
Infrastructure/kind/: .gitignore  _bootstrap.sh  argocd-applications.sh  argocd.sh  cluster.sh  keycloak.sh  kube-prometheus-stack.sh  rekeningrijden.sh
InternationalAPI/: IO.Swagger.sln  README.md  docker-compose.yml
LTS/: .gitignore  README.md  azure-pipelines.yml
LTS/LTS/: LTS.sln  docker-compose.yml
Payment-Service/: README.md
Payment-Service/Services/: Services.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  launchSettings.json
Profile-Service/: README.md  azure-pipelines.yml
Profile-Service/ProfileMicroService/: ProfileMicroService.sln
Rekeningrijden-FrontEnd/: .gitignore  docker-compose.yml
Route-Coordinator-Service/: azure-pipelines.yml
Router-API/: .gitignore  README.md  azure-pipelines.yml
Router-API/Router-Api/: Router-Api.sln  (+1 more)
Router-Service/: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  Makefile  README.md  app.py  azure-pipelines.yml  docker-compose.yml  pyproject.toml
Router-Service/src/router_service/: __init__.py  router_service.py
Router-Service/src/router_service/helpers/: __init__.py  custom_nearest_edge.py  helpers.py  price_helpers.py  route_formatter.py  time.py
Router-Service/src/router_service/library_overrides/: RabbitMQSender.py
Router-Service/src/router_service/models/: message_envelope.py  price_model.py  route_models.py  vehicle.py
Router-Service/src/router_service/services/: calculator.py  data_fetcher.py  pricer.py  receiver.py  route_handler.py  sender.py
Router-Service/src/tests/: test_router_service.py
Simulation/: .gitignore  design.lorien
Simulation/tracker_generator/: .env.local  .pyenchant_pylint_dict.txt  .pylintrc  .yamllint  Makefile  README.md  pyproject.toml
Simulation/tracker_generator/tests/: __init__.py
Simulation/tracker_generator/tracker_generator/: __init__.py  generator.py
Templates/: README.md
charts/: README.md  index.yaml
(+527 files in other folders)
