[tool.poetry]
name = "pythonhelper"
version = "0.1.0"
description = ""
authors = ["David Hellinga <d.hellinga@student.fontys.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = {extras = ["pyarrow"], version = "^2.0.2"}
pyarrow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
